Added new features

--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -19,8 +19,10 @@
 
     // Modules Center
     "modules-center": [
+        "custom/lock_screen",
         "clock",
-        "custom/power_btn"
+        "custom/power_btn",
+        "custom/updates"
     ],
     
     // Modules Right
