--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -45,7 +45,8 @@ exec-once = waybar
 exec-once = nm-applet
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = hyprpaper
-
+exec-once = /usr/lib/geoclue-2.0/demos/agent
+exec-once = /usr/lib/xdg-desktop-portal-hyprland
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -55,6 +56,7 @@ exec-once = hyprpaper
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+env = GTK_THEME,Orchis-Dark
 
 
 ###################
@@ -128,35 +130,19 @@ decoration {
 
 # https://wiki.hypr.land/Configuring/Variables/#animations
 animations {
-    enabled = yes, please :)
-
-    # Default curves, see https://wiki.hypr.land/Configuring/Animations/#curves
-    #        NAME,           X0,   Y0,   X1,   Y1
-    bezier = easeOutQuint,   0.23, 1,    0.32, 1
-    bezier = easeInOutCubic, 0.65, 0.05, 0.36, 1
-    bezier = linear,         0,    0,    1,    1
-    bezier = almostLinear,   0.5,  0.5,  0.75, 1
-    bezier = quick,          0.15, 0,    0.1,  1
-
-    # Default animations, see https://wiki.hypr.land/Configuring/Animations/
-    #           NAME,          ONOFF, SPEED, CURVE,        [STYLE]
-    animation = global,        1,     10,    default
-    animation = border,        1,     5.39,  easeOutQuint
-    animation = windows,       1,     4.79,  easeOutQuint
-    animation = windowsIn,     1,     4.1,   easeOutQuint, popin 87%
-    animation = windowsOut,    1,     1.49,  linear,       popin 87%
-    animation = fadeIn,        1,     1.73,  almostLinear
-    animation = fadeOut,       1,     1.46,  almostLinear
-    animation = fade,          1,     3.03,  quick
-    animation = layers,        1,     3.81,  easeOutQuint
-    animation = layersIn,      1,     4,     easeOutQuint, fade
-    animation = layersOut,     1,     1.5,   linear,       fade
-    animation = fadeLayersIn,  1,     1.79,  almostLinear
-    animation = fadeLayersOut, 1,     1.39,  almostLinear
-    animation = workspaces,    1,     1.94,  almostLinear, fade
-    animation = workspacesIn,  1,     1.21,  almostLinear, fade
-    animation = workspacesOut, 1,     1.94,  almostLinear, fade
-    animation = zoomFactor,    1,     7,     quick
+    enabled = true
+    bezier = wind, 0.05, 0.9, 0.1, 1.05
+    bezier = winIn, 0.1, 1.1, 0.1, 1.1
+    bezier = winOut, 0.3, -0.3, 0, 1
+    bezier = liner, 1, 1, 1, 1
+    animation = windows, 1, 6, wind, slide
+    animation = windowsIn, 1, 6, winIn, slide
+    animation = windowsOut, 1, 5, winOut, slide
+    animation = windowsMove, 1, 5, wind, slide
+    animation = border, 1, 1, liner
+    animation = borderangle, 1, 30, liner, loop
+    animation = fade, 1, 10, default
+    animation = workspaces, 1, 5, wind
 }
 
 xwayland {
@@ -236,6 +222,17 @@ device {
 }
 
 
+# Windowrules
+windowrule {
+    name = windowrule1
+    opacity = 0.9 0.9
+    float = on
+    size = 800 500
+    center = on
+    match:class = thunar
+}
+
+
 ###################
 ### KEYBINDINGS ###
 ###################
@@ -244,16 +241,18 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, $terminal
-bind = $mainMod, D, killactive,
+bind = $mainMod, Q, exec, $terminal    # Open the terminal
+bind = $mainMod, D, killactive,    # Close active window
 bind = $mainMod, M, exec, command -v hyprshutdown >/dev/null 2>&1 && hyprshutdown || hyprctl dispatch exit
-bind = $mainMod, E, exec, $fileManager
+bind = $mainMod, E, exec, $fileManager    # Open filemanager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, SPACE, exec, rofi -show drun -theme ~/.config/rofi/config.rasi
-bind = $mainMod SHIFT, B, exec, /home/shingetsu/.config/waybar/launch.sh
+bind = $mainMod, SPACE, exec, rofi -show drun -theme ~/.config/rofi/config.rasi    # Open app manager
+bind = $mainMod SHIFT, B, exec, /home/shingetsu/.config/waybar/launch.sh    # Restart waybar
+bind = $mainMod, S, exec, grim -g "$(slurp)" - | swappy -f -    # Take a screenshot
+bind = $mainMod, L, exec, swaylock    # Lock screen
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
